--- a/src/app/components/admin/admin-nav/admin-nav.component.html
+++ b/src/app/components/admin/admin-nav/admin-nav.component.html
@@ -11,6 +11,10 @@
         </li>
 
         <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/admin','equipment']" routerLinkActive="active">Equipment Management</a>
+        </li>
+
+        <li class="nav-item p-1">
           <a class="nav-link" [routerLink]="['/admin','inquiries']" routerLinkActive="active">Inquiry Management</a>
         </li>
       </ul>
