--- a/src/app/components/admin/equipment-management/equipment-management.component.html
+++ b/src/app/components/admin/equipment-management/equipment-management.component.html
@@ -16,7 +16,7 @@
           <th>Equipment Name</th>
           <th>Quantity at Hand</th>
           <th class="right-header">
-            <span class="float-right" style="margin-right:40px;">
+            <span class="float-right">
               Action
             </span>
           </th>
@@ -32,7 +32,12 @@
               {{eachEquipment.equipmentQuantity}}
             </span>
           </td>
-          <td></td>
+          <td>
+            <i class="far fa-trash-alt icon-format float-right"
+              style="color: rgba(0, 0, 0, 0.699); font-size: 20px;"></i>
+            <i class="far fa-edit float-right mr-2" style="color: rgba(0, 0, 0, 0.699); font-size: 20px; cursor: pointer;"
+            (click)="openEditAdditionalEquipment(eachEquipment.equipmentId)"></i>
+          </td>
         </tr>
       </table>
       <ng-template #showEmpty>
