--- a/src/app/components/admin/admin-nav/admin-nav.component.html
+++ b/src/app/components/admin/admin-nav/admin-nav.component.html
@@ -11,11 +11,23 @@
         </li>
 
         <li class="nav-item p-1">
-          <a class="nav-link" [routerLink]="['/admin','equipment']" routerLinkActive="active">Equipment Management</a>
+          <a class="nav-link" [routerLink]="['/admin','vehicles']" routerLinkActive="active">Vehicles</a>
         </li>
 
         <li class="nav-item p-1">
-          <a class="nav-link" [routerLink]="['/admin','inquiries']" routerLinkActive="active">Inquiry Management</a>
+          <a class="nav-link" [routerLink]="['/admin','rentals']" routerLinkActive="active">Rentals</a>
+        </li>
+
+        <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/admin','equipment']" routerLinkActive="active">Rental Equipment</a>
+        </li>
+
+        <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/admin','users']" routerLinkActive="active">Users</a>
+        </li>
+
+        <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/admin','inquiries']" routerLinkActive="active">Inquiries</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto p-2">
