--- a/src/app/components/admin/equipment-management/equipment-management.component.html
+++ b/src/app/components/admin/equipment-management/equipment-management.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-sm-4">
       <!-- ng model allows two way data binding in angular and ngModelChange is executed whenever the searchTerm changes its value -->
-      <input type="text" class="form-control" placeholder="Provide Equipment Name..." [(ngModel)]="searchTerm"
+      <input type="text" class="form-control" placeholder="Provide Equipment Name..." [(ngModel)]="searchTerm" style="border-color: none;"
         (ngModelChange)="filterViaName()">
     </div>
     <div class="col-sm-8">
@@ -14,8 +14,8 @@
   </div>
 
   <div class="row mt-3">
-    <div class="col-sm-12 col-lg-12 col-md-12" *ngIf="equipmentList; else showError;">
-      <table class="table table-borderless custom-table" *ngIf="equipmentList.length>0; else showEmpty;">
+    <div class="col-sm-12 col-lg-12 col-md-12" *ngIf="filterList; else showError;">
+      <table class="table table-borderless custom-table" *ngIf="filterList.length>0; else showEmpty;">
         <tr class="table-header">
           <th class="left-header">#</th>
           <th>Equipment Name</th>
@@ -48,10 +48,9 @@
       </table>
       <ng-template #showEmpty>
         <div class="alert alert-warning">
-          <h5 class="alert-heading">No Items Present</h5>
+          <h5 class="alert-heading">No Items Found</h5>
           <hr>
-          <p>There are no additional equipment available at Banger and Co. that customers can add to their
-            booking.<br>Signed,<br>Banger and Co.</p>
+          <p>The result generated no additional equipments in the system<br>Signed,<br>Banger and Co.</p>
         </div>
       </ng-template>
     </div>
