--- a/src/app/components/guest/sign-up/sign-up.component.html
+++ b/src/app/components/guest/sign-up/sign-up.component.html
@@ -189,7 +189,7 @@
 
               <div class="row justify-content-center mt-3" *ngIf="imageLoaded">
                 <div class="col-sm-12" style="text-align: center;">
-                  <img [src]="imageUrl" class="img-responsive" width="250px" height="275px">
+                  <img [src]="imageUrl" class="img-responsive" width="235px" height="250px" style="border-radius: 50%;">
                 </div>
               </div>
             </div>
