Added admin components for high level functions

--- a/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
+++ b/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
@@ -1,5 +1,5 @@
 <app-admin-nav></app-admin-nav>
-<app-bread-crumb [pageName]="'Manage The Inquiries'"></app-bread-crumb>
+<app-bread-crumb [pageName]="'Inquiry Management'"></app-bread-crumb>
 
 <div>
   <div class="container">
