--- a/src/app/components/guest/sign-up/sign-up.component.html
+++ b/src/app/components/guest/sign-up/sign-up.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div class="modal-body">
-  <mat-horizontal-stepper [linear]="true" style="font-family: 'Inter', sans-serif;">
+  <mat-horizontal-stepper [linear]="true">
     <!-- parent container to hold the steppers -->
     <mat-step [stepControl]="userInfoForm">
       <!-- single step in the form -->
