Added new route

--- a/src/app/components/admin/admin-vehicle-management/vehicle-create-update/vehicle-create-update.component.html
+++ b/src/app/components/admin/admin-vehicle-management/vehicle-create-update/vehicle-create-update.component.html
@@ -25,7 +25,8 @@
               <select class="form-control" [disabled]="vehicleTypeList.length == 0">
                 <option *ngFor="let eachType of vehicleTypeList" [value]="eachType.vehicleTypeId">{{eachType.size |
                   titlecase}} {{eachType.typeName |
-                  titlecase}} - {{eachType.pricePerDay}}/Day</option>
+                  titlecase}} - {{eachType.pricePerDay}}/Day
+                </option>
               </select>
             </div>
           </div>
