Refactored folder structure for vehicle management

--- a/src/app/components/shared/bread-crumb/bread-crumb.component.html
+++ b/src/app/components/shared/bread-crumb/bread-crumb.component.html
@@ -4,8 +4,8 @@
       <div class="col-sm-12">
         <div class="row">
           <div class="col-sm-12" style="text-align: left;">
-            <i class="fas fa-arrow-left format-icon" (click)="goBack()"></i>
-            <span class="text-format">{{pageName}}</span>
+            <i class="fas fa-arrow-left format-icon" (click)="visitPreviousPage()"></i>
+            <span class="text-format">{{pageTitleOnDOM}}</span>
           </div>
         </div>
       </div>
