--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-type-management/vehicle-type-create-manage/vehicle-type-create-manage.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-type-management/vehicle-type-create-manage/vehicle-type-create-manage.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="handleNewTypeCreation()" [formGroup]="vehicleTypeCreator">
+<form (ngSubmit)="handleType()" [formGroup]="vehicleTypeCreator">
   <div class="modal-header">
     <h5 class="modal-title">{{getName()}}</h5>
     <button type="button" class="close float-right" (click)="hideModal()">
@@ -11,7 +11,7 @@
       <div class="col-sm-12">
         <div class="form-group">
           <label class="fonts">Type Name</label>
-          <input type="text" [disabled]="createMode==false" class="form-control" placeholder="Name (Town Car)"
+          <input type="text" class="form-control" placeholder="Name (Town Car)"
             [formControlName]="'typeName'" />
           <span class="form-error"
             *ngIf="vehicleTypeCreator.get('typeName').touched && vehicleTypeCreator.get('typeName').invalid">Invalid
@@ -24,7 +24,7 @@
       <div class="col-sm-12">
         <div class="form-group">
           <label class="fonts">Category Size</label>
-          <select class="form-control" [formControlName]="'categorySize'" [disabled]="createMode==false">
+          <select class="form-control" [formControlName]="'categorySize'">
             <option value="small">Small</option>
             <option value="medium">Medium</option>
             <option value="large">Large</option>
