linked backend for create vehicle.

--- a/src/styles.css
+++ b/src/styles.css
@@ -135,3 +135,12 @@ textarea.ng-invalid.ng-touched{
 }
 
 
+input.ng-valid.ng-touched{
+  border: 1px solid lightgreen;
+}
+
+textarea.ng-valid.ng-touched{
+  border: 1px solid lightgreen;
+}
+
+
