--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
@@ -7,27 +7,29 @@
 </div>
 
 <div class="modal-body">
-  <form (ngSubmit)="processFormSubmit()">
-    <!-- using the angular stepper from material UI -->
-    <!-- denotes it is a stepper form that is going in linear -->
-    <!-- linear attribute denotes user must complete previous step before proceeding -->
-    <mat-horizontal-stepper [linear]="true">
-
-      <!-- mat step denotes a stage in the form -->
-      <mat-step>
-        <!-- mat step label adds a header caption for each stage -->
+  <!-- using the angular stepper from material UI -->
+  <!-- denotes it is a stepper form that is going in linear -->
+  <!-- linear attribute denotes user must complete previous step before proceeding -->
+  <mat-horizontal-stepper [linear]="true">
+    <!-- mat step denotes a stage in the form -->
+    <mat-step [stepControl]="vehicleForm">
+      <!-- mat step label adds a header caption for each stage -->
+      <form [formGroup]="vehicleForm">
         <ng-template matStepLabel>Provide Vehicle Information</ng-template>
 
         <div class="row">
           <div class="col-sm-7">
             <div class="form-group">
               <label class="fonts">Vehicle Type</label>
-              <select class="form-control" [disabled]="vehicleTypeList.length == 0">
+              <select class="form-control" [formControlName]="'vehicleType'">
                 <option *ngFor="let eachType of vehicleTypeList" [value]="eachType.vehicleTypeId">{{eachType.size |
                   titlecase}} {{eachType.typeName |
                   titlecase}} - {{eachType.pricePerDay}}/Day
                 </option>
               </select>
+              <span class="form-error"
+                *ngIf="vehicleForm.get('vehicleType').invalid && vehicleForm.get('vehicleType').touched">Please Provide
+                a Valid Type</span>
             </div>
           </div>
           <div class="col-sm-5">
@@ -105,13 +107,23 @@
           <div class="col-sm-5">
             <div class="form-group">
               <label class="fonts">License Plate</label>
-              <input class="form-control" placeholder="Provide License Plate (CAD-7859)">
+              <input class="form-control" placeholder="Provide License Plate (XX00 XXX)"
+                [formControlName]="'licensePlate'">
+              <span class="form-error"
+                *ngIf="vehicleForm.get('licensePlate').invalid && vehicleForm.get('licensePlate').touched">Please
+                Provide
+                a Valid License Plate</span>
             </div>
           </div>
           <div class="col-sm-7">
             <div class="form-group">
               <label class="fonts">Vehicle Name</label>
-              <input class="form-control" placeholder="Provide Vehicle Name (Mercedes S Class)">
+              <input class="form-control" placeholder="Provide Vehicle Name (Mercedes S Class)"
+                [formControlName]="'vehicleName'">
+              <span class="form-error"
+                *ngIf="vehicleForm.get('vehicleName').invalid && vehicleForm.get('vehicleName').touched">Please
+                Provide
+                a Valid Vehicle Name (Maximum - 255 Characters)</span>
             </div>
           </div>
         </div>
@@ -120,23 +132,31 @@
           <div class="col-sm-6">
             <div class="form-group">
               <label class="fonts">Fuel Type</label>
-              <select class="form-control">
-                <option value="petrol">Petrol</option>
-                <option value="diesel">Diesel</option>
-                <option value="hybrid">Hybrid</option>
-                <option value="electric">Electric</option>
+              <select class="form-control" [formControlName]="'fuelType'">
+                <option value="Petrol">Petrol</option>
+                <option value="Diesel">Diesel</option>
+                <option value="Hybrid">Hybrid</option>
+                <option value="Electric">Electric</option>
               </select>
+              <span class="form-error"
+                *ngIf="vehicleForm.get('fuelType').invalid && vehicleForm.get('fuelType').touched">Please
+                Provide
+                a Valid Fuel Type</span>
             </div>
           </div>
 
           <div class="col-sm-6">
             <div class="form-group">
               <label class="fonts">Transmission Type</label>
-              <select class="form-control">
-                <option value="automatic">Automatic</option>
-                <option value="maunal">Manual</option>
-                <option value="triptonic">Triptonic</option>
+              <select class="form-control" [formControlName]="'transmission'">
+                <option value="Automatic">Automatic</option>
+                <option value="Manual">Manual</option>
+                <option value="Triptonic">Triptonic</option>
               </select>
+              <span class="form-error"
+                *ngIf="vehicleForm.get('transmission').invalid && vehicleForm.get('transmission').touched">Please
+                Provide
+                a Transmission Type</span>
             </div>
           </div>
         </div>
@@ -144,67 +164,67 @@
         <div class="row mt-2">
           <div class="col-sm-12">
             <div class="form-group">
-              <button class="float-right btn btn-primary" style="width:25%;" type="button" matStepperNext>Next</button>
+              <button class="float-right btn btn-primary" style="width:25%;" type="button" matStepperNext
+                [disabled]="vehicleForm.invalid">Next</button>
             </div>
           </div>
         </div>
-      </mat-step>
+      </form>
+    </mat-step>
 
-      <!-- vehicle image selector -->
-      <mat-step>
-        <ng-template matStepLabel>Provide a Picture</ng-template>
+    <!-- vehicle image selector -->
+    <mat-step>
+      <ng-template matStepLabel>Provide a Picture</ng-template>
 
-        <div class="row justify-content-center">
-          <div class="col-sm-5">
-            <input type="file" accept="image/jpeg" style="display:none" class="mb-2" #vehicleImagePicker
-              (change)="loadPicture(vehicleImagePicker.files[0])" multiple="false">
-            <button class="btn btn-secondary mt-2" style="width: 100%;" (click)="vehicleImagePicker.click()"
-              type="button">Upload a Picture (Maximum - 5MB)</button>
-          </div>
+      <div class="row justify-content-center">
+        <div class="col-sm-5">
+          <input type="file" accept="image/jpeg" style="display:none" class="mb-2" #vehicleImagePicker
+            (change)="loadPicture(vehicleImagePicker.files[0])" multiple="false">
+          <button class="btn btn-secondary mt-2" style="width: 100%;" (click)="vehicleImagePicker.click()"
+            type="button">Upload a Picture (Maximum - 5MB)</button>
         </div>
+      </div>
 
-        <div class="row justify-content-center mt-3">
-          <div class="col-sm-12">
+      <div class="row justify-content-center mt-3">
+        <div class="col-sm-12">
 
-            <ngx-spinner [name]="'imageSpinner'" type="ball-clip-rotate" [fullScreen]="false" [bdColor]="'transparent'"
-              [color]="'rgb(81, 0, 128)'"></ngx-spinner>
+          <ngx-spinner [name]="'imageSpinner'" type="ball-clip-rotate" [fullScreen]="false" [bdColor]="'transparent'"
+            [color]="'rgb(81, 0, 128)'"></ngx-spinner>
 
-            <div class="row justify-content-center" *ngIf="!vehicleImageUrl">
-              <div class="col-sm-6 mt-2">
-                <div class="alert alert-info" style="text-align: center;">
-                  Please select an image to proceed
-                </div>
+          <div class="row justify-content-center" *ngIf="!vehicleImageUrl">
+            <div class="col-sm-6 mt-2">
+              <div class="alert alert-info" style="text-align: center;">
+                Please select an image to proceed
               </div>
             </div>
+          </div>
 
-            <div class="row justify-content-center" *ngIf="fileSizeExceeded == true; else showImage">
-              <div class="col-sm-6">
-                <div class="alert alert-warning">
-                  The image you selected exceeded 5MB
-                </div>
+          <div class="row justify-content-center" *ngIf="fileSizeExceeded == true; else showImage">
+            <div class="col-sm-6">
+              <div class="alert alert-warning">
+                The image you selected exceeded 5MB
               </div>
             </div>
+          </div>
 
-            <ng-template #showImage>
-              <div class="row justify-content-center">
-                <div class="col-sm-6 mt-3" style="width: 180; height: 180px; text-align: center;">
-                  <img [src]="vehicleImageUrl" width="180" height="180" class="img-responsive" *ngIf="vehicleImageUrl">
-                </div>
+          <ng-template #showImage>
+            <div class="row justify-content-center">
+              <div class="col-sm-6 mt-3" style="width: 180; height: 180px; text-align: center;">
+                <img [src]="vehicleImageUrl" width="180" height="180" class="img-responsive" *ngIf="vehicleImageUrl">
               </div>
-            </ng-template>
-          </div>
+            </div>
+          </ng-template>
         </div>
-        <div class="row">
-          <div class="col-sm-12">
-            <button class="btn btn-primary float-right ml-2" style="width:30%;" type="submit">Create Vehicle</button>
-            <button class="btn btn-warning float-right" style="width:30%;" matStepperPrevious
-              type="button">Previous</button>
-          </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-sm-12">
+          <button class="btn btn-primary float-right ml-2" style="width:30%;" type="button" [disabled]="vehicleForm.invalid || !loadedImage" (click)="createVehicle()">Create Vehicle</button>
+          <button class="btn btn-warning float-right" style="width:30%;" matStepperPrevious
+            type="button">Previous</button>
         </div>
-      </mat-step>
-    </mat-horizontal-stepper>
-
-  </form>
+      </div>
+    </mat-step>
+  </mat-horizontal-stepper>
 </div>
 
 <div class="modal-footer">
