--- a/src/app/components/admin/equipment-management/equipment-management.component.html
+++ b/src/app/components/admin/equipment-management/equipment-management.component.html
@@ -5,8 +5,8 @@
   <div class="row">
     <div class="col-sm-4">
       <!-- ng model allows two way data binding in angular and ngModelChange is executed whenever the searchTerm changes its value -->
-      <input type="text" class="form-control" placeholder="Provide Equipment Name..." [(ngModel)]="searchTerm" style="border-color: none;"
-        (ngModelChange)="filterViaName()">
+      <input type="text" class="form-control" placeholder="Provide Equipment Name..." [(ngModel)]="searchTerm"
+        style="border-color: none;" (ngModelChange)="filterViaName()">
     </div>
     <div class="col-sm-8">
       <button class="btn btn-primary float-right" (click)="loadCreateEquipment()">Create New Equipment</button>
@@ -49,8 +49,7 @@
       <ng-template #showEmpty>
         <div class="alert alert-warning">
           <h5 class="alert-heading">No Items Found</h5>
-          <hr>
-          <p>The result generated no additional equipments in the system<br>Signed,<br>Banger and Co.</p>
+          The result generated no additional equipments in the system.
         </div>
       </ng-template>
     </div>
@@ -58,8 +57,7 @@
       <div class="col-sm-12 col-lg-12 col-md-12" *ngIf="isError">
         <div class="alert alert-danger">
           <h5 class="alert-heading">Equipment List Not Loaded</h5>
-          <hr>
-          <p>We could not fetch the equipment list. Please try again. <br>Signed,<br>Banger and Co.</p>
+          We could not fetch the equipment list. Please try again.
         </div>
       </div>
     </ng-template>
