created vehicle view

--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/admin-vehicle-browsing.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/admin-vehicle-browsing.component.html
@@ -35,7 +35,14 @@
     </div>
     <ng-template #showVehicles>
       <div class="col-sm-12">
-
+        <div class="row">
+          <div class="col-sm-4" *ngFor="let vehicle of vehicleList">
+            <!-- pass the vehicle to render on
+            each iteration into the vehicle card
+            component via property binding of "vehicleToRender" declared in VehicleCard component -->
+            <app-vehicle-card [vehicleToRender]="vehicle"></app-vehicle-card>
+          </div>
+        </div>
       </div>
     </ng-template>
   </div>
