--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/admin-vehicle-browsing.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/admin-vehicle-browsing.component.html
@@ -1,7 +1,16 @@
 <app-bread-crumb [pageName]="'Vehicle Management'"></app-bread-crumb>
 <div class="container">
-  <div class="row">
+  <div class="row mb-3">
     <div class="col-sm-4">
+      <input type="text" placeholder="Enter Vehicle Name..." class="form-control" [(ngModel)]="enteredName" (ngModelChange)="searchByName()">
+    </div>
+    <div class="col-sm-8 align-self-center">
+      <button class="btn btn-primary float-right" (click)="launchCreateModal()">Create Vehicle</button>
+      <button class="btn btn-secondary float-right mr-2" [routerLink]="'vehicleType'">Manage Vehicle Types</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5">
       <div class="form-group float-left" style="width: 100%;">
         <label class="fonts">Filter Via Vehicle Type</label>
         <select class="form-control" [disabled]="vehicleTypeList.length == 0" #theOption
@@ -16,12 +25,6 @@
           </option>
         </select>
       </div>
-    </div>
-
-    <div class="col-sm-8 align-self-center">
-      <!-- self center for vertical middle of button -->
-      <button class="btn btn-primary float-right" (click)="launchCreateModal()">Create Vehicle</button>
-      <button class="btn btn-secondary float-right mr-2" [routerLink]="'vehicleType'">Manage Vehicle Types</button>
     </div>
   </div>
 
