--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ body {
 }
 
 .custom-table {
-  /* box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 22px 0 rgba(0, 0, 0, 0.19); */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   padding: 15px;
   border: 0px solid black;
   border-radius: 15px;
@@ -91,11 +91,11 @@ body {
 }
 
 .left-header {
-  border-top-left-radius: 15px;
+  border-top-left-radius: 7.5px;
 }
 
 .right-header {
-  border-top-right-radius: 15px;
+  border-top-right-radius: 7.5px;
 }
 
 .custom-row {
@@ -108,7 +108,7 @@ tr {
 
 tr:last-of-type td:first-of-type {
   /* last row first table data */
-  border-bottom-left-radius: 10px;
+  border-bottom-left-radius: 7.5px;
 }
 
 tr:first-of-type {
@@ -123,24 +123,21 @@ tr:last-of-type {
 
 tr:last-of-type td:last-of-type {
   /* last row, last table data */
-  border-bottom-right-radius: 10px;
+  border-bottom-right-radius: 7.5px;
 }
 
-input.ng-invalid.ng-touched{
+input.ng-invalid.ng-touched {
   border: 1px solid lightcoral;
 }
 
-textarea.ng-invalid.ng-touched{
+textarea.ng-invalid.ng-touched {
   border: 1px solid lightcoral;
 }
 
-
-input.ng-valid.ng-touched{
+input.ng-valid.ng-touched {
   border: 1px solid lightgreen;
 }
 
-textarea.ng-valid.ng-touched{
+textarea.ng-valid.ng-touched {
   border: 1px solid lightgreen;
 }
-
-
