Updated title and UI and new column for viewing vehicle type

--- a/src/app/components/admin/admin-nav/admin-nav.component.html
+++ b/src/app/components/admin/admin-nav/admin-nav.component.html
@@ -19,7 +19,7 @@
         </li>
 
         <li class="nav-item p-1">
-          <a class="nav-link" [routerLink]="['/admin','equipment']" routerLinkActive="active">Rental Equipment</a>
+          <a class="nav-link" [routerLink]="['/admin','equipment']" routerLinkActive="active">Additional Equipment</a>
         </li>
 
         <li class="nav-item p-1">
