implemented remove vehicle type

--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-type-management/admin-vehicle-type-management.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-type-management/admin-vehicle-type-management.component.html
@@ -33,7 +33,8 @@
           <td>{{eachType.vehicleCountInType}}</td>
           <td>
             <i class="far fa-trash-alt icon-format float-right"
-              style="color: rgba(0, 0, 0, 0.699); font-size: 20px;"></i>
+              style="color: rgba(0, 0, 0, 0.699); font-size: 20px; cursor: pointer;"
+              (click)="openDeleteModal(eachType.vehicleTypeId)"></i>
             <i class="far fa-edit float-right mr-2"
               style="color: rgba(0, 0, 0, 0.699); font-size: 20px; cursor: pointer;"
               (click)="openEditTypeModal(eachType.vehicleTypeId)"></i>
